--- a/index.html
+++ b/index.html
@@ -13,24 +13,44 @@
     <p></p>
     <article>
         <p>If you have managed to click onto this website, then you most likely know what a battle royal is, or at the<br>
-         very least have heard of it. For those who do not know, and for the sake of proper context in this article,<br>
-          a battle royal is a form of game which involves a relatively large number of players competing to be<br>
-           the last player to survive. There may be other definitions out there, but let us stick with this for now. To make<br>
-            it easier for you to remember, think of The Hunger Games when you see battle royal as it is essentially<br>
-            the same concept and if you have not seen The Hunger Games, then I am not sure what to tell you.</p>
+        very least have heard of it. For those who do not know, and for the sake of proper context in this article,<br>
+        a battle royal is a form of game which involves a relatively large number of players competing to be<br>
+        the last player to survive. There may be other definitions out there, but let us stick with this for now. To make<br>
+        it easier for you to remember, think of The Hunger Games when you see battle royal as it is essentially<br>
+        the same concept and if you have not seen The Hunger Games, then I am not sure what to tell you.</p>
         
-            <p>The concept of hosting a battle royal in the real world is not necessarily the most practical or ethical <br>
-                thing to do, given that elimination requires one loosing their life, but the concept remains quite <br>
-                entertaining. To give people the rush of fighting for survival without having to risk ones life, video game <br>
-                companies have created virtual versions of battle royals, where various players fight it out to be either <br>
-                the last player or team standing. A great Idea of course, but because the methods, means and skills used <br>
-                to survive in such a game become more and more complex over time, players who are accustomed to <br>
-                the system become better, further increasing their competitive advantage. This is most definitely a good <br>
-                thing for such a player, but this also makes it more difficult for new players to find fun in the game as he <br>
-                or she is surrounded by players that are significantly better. I know what you are thinking, “Is that not <br>
-                what skill-based match making is for?”, well yes, but people get super lucky for a couple of games <br>
-                which moves them up the skill ladder, however they are unable to move back down when their luck runs out. <br>
-                This leaves players stuck in a position that causes them to slowly drift away from the game.<br></p>
-            </article>
+        <p>The concept of hosting a battle royal in the real world is not necessarily the most practical or ethical <br>
+        thing to do, given that elimination requires one loosing their life, but the concept remains quite <br>
+        entertaining. To give people the rush of fighting for survival without having to risk ones life, video game <br>
+        companies have created virtual versions of battle royals, where various players fight it out to be either <br>
+        the last player or team standing. A great Idea of course, but because the methods, means and skills used <br>
+        to survive in such a game become more and more complex over time, players who are accustomed to <br>
+        the system become better, further increasing their competitive advantage. This is most definitely a good <br>
+        thing for such a player, but this also makes it more difficult for new players to find fun in the game as he <br>
+        or she is surrounded by players that are significantly better. I know what you are thinking, “Is that not <br>
+        what skill-based match making is for?”, well yes, but people get super lucky for a couple of games <br>
+        which moves them up the skill ladder, however they are unable to move back down when their luck runs out. <br>
+        This leaves players stuck in a position that causes them to slowly drift away from the game.<br></p>
+    <p></p>
+    <h1>The Rise of Elden Ring</h1>
+    <p><strong>By:</strong> Oluwanifemi O. Olotu</p>
+    <p><strong>Published:</strong> June 1st 2022</p>
+    </article>
+        <p>The video game world has seen a huge storm of successful games over the past few years, but there has <br>
+        been a particular game that came out this year that has taken the gaming world by storm. The video <br>
+        game in question is Elden Ring, an action role-playing game developed by FromSoftware and published <br>
+        by Bandai Namco Entertainment. It is particularly difficult and is filled with various Non Playable Characters, bosses, and <br>
+        many other enemies to fight with a huge library of weapons, spells, and incantations.<br></p>
+
+        <p>According to google, 93 percent of players like the game and it has received a 5/5 rating on TechRadar. <br>
+        It is also available on PlayStation, Xbox, and PC. I am yet to finish the game, but I can tell you one thing <br>
+        for sure, it has been as much fun as difficult. I would say that the introduction of online multiplayer in <br>
+        the form of summons and invasions, together with the size of the map, which is reported to be updated <br>
+        in the future, Elden Ring is far from loosing its shine in the video game industry. It is a challenging game, <br>
+        but not so challenging that it puts the average player off the game completely. I look forward to what <br>
+        else this franchise has to offer.<br></p>
+    <article>
+
+    </article>
 </body>
 </html>
