about page update

--- a/about.html
+++ b/about.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>About Oluwanifemi</title>
 </head>
 <body>
-    
+    <p>Hey there, my name is Oluwanifemi Olotu. I am a 21 year old college student at Michigan State University.<br>
+    I love all sorts of genres of music, but particularly R&B, lowfi, and hip-hop. I am also reaeasonably athletic<br>
+    as I like playing many sports including soccer, basketball, swimming, track and field, and table tennis.<br>
+    I am from Nigeria and am 6 feet, 4 inches. I honestly dont know what else to put herre for now, but I will<br>
+    have some more info in here later on. In the mean time, please enjoy my blog.</bk></p>
 </body>
 </html>
