--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Are Battle Royal Games still Fun?</h1>
     <p><strong>By:</strong> Oluwanifemi O. Olotu</p>
     <p><strong>Published:</strong> June 1st 2022</p>
-    <p></p>
+    <p><a<img src="Battle Royale Blog Image.jpeg" alt="Image with characters from different battle royales"></a></p>
     <article>
         <p>If you have managed to click onto this website, then you most likely know what a battle royal is, or at the<br>
         very least have heard of it. For those who do not know, and for the sake of proper context in this article,<br>
@@ -35,6 +35,7 @@
     <h1>The Rise of Elden Ring</h1>
     <p><strong>By:</strong> Oluwanifemi O. Olotu</p>
     <p><strong>Published:</strong> June 1st 2022</p>
+    <p><a<img src="Elden Ring Blog Photo.jpg" alt="Image of Elden Ring loading screen"></a></p>
     </article>
         <p>The video game world has seen a huge storm of successful games over the past few years, but there has <br>
         been a particular game that came out this year that has taken the gaming world by storm. The video <br>
