--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <h1>The Rise of Elden Ring</h1>
     <p><strong>By:</strong> Oluwanifemi O. Olotu</p>
     <p><strong>Published:</strong> June 1st 2022</p>
-    <p><a< img src="Elden Ring Blog Photo.jpg" alt="Image of Elden Ring loading screen"></a></p>
+    <p><img src="Elden Ring Blog Photo.jpg" alt="Image of Elden Ring loading screen"></p>
     </article>
         <p>The video game world has seen a huge storm of successful games over the past few years, but there has <br>
         been a particular game that came out this year that has taken the gaming world by storm. The video <br>
