--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Are Battle Royal Games still Fun?</h1>
     <p><strong>By:</strong> Oluwanifemi O. Olotu</p>
     <p><strong>Published:</strong> June 1st 2022</p>
-    <p><a< img src="Battle Royale Blog Image.jpeg" alt="Image with characters from different battle royales"></a></p>
+    <p><img src="Battle Royale Blog Image.jpeg" alt="Image with characters from different battle royales"></p>
     <article>
         <p>If you have managed to click onto this website, then you most likely know what a battle royal is, or at the<br>
         very least have heard of it. For those who do not know, and for the sake of proper context in this article,<br>
