--- a/index.html
+++ b/index.html
@@ -32,10 +32,12 @@
         which moves them up the skill ladder, however they are unable to move back down when their luck runs out. <br>
         This leaves players stuck in a position that causes them to slowly drift away from the game.<br></p>
     <p></p>
+    </article>
     <h1>The Rise of Elden Ring</h1>
     <p><strong>By:</strong> Oluwanifemi O. Olotu</p>
     <p><strong>Published:</strong> June 1st 2022</p>
     <p><img src="Elden Ring Blog Photo.jpg" alt="Image of Elden Ring loading screen"></p>
+    <article>
         <p>The video game world has seen a huge storm of successful games over the past few years, but there has <br>
         been a particular game that came out this year that has taken the gaming world by storm. The video <br>
         game in question is Elden Ring, an action role-playing game developed by FromSoftware and published <br>
