--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
     <title>Femi's Blog</title>
 </head>
 <body>
-    <h1>Are Battle Royal Games still Fun?</h1>
+    <h1>Blog Home</h1>
+    <p><a href="/about.html">About</a></p>
+    <article>
+    <h2>Are Battle Royal Games still Fun?</h2>
     <p><strong>By:</strong> Oluwanifemi O. Olotu</p>
     <p><strong>Published:</strong> June 1st 2022</p>
     <p><img src="Battle Royale Blog Image.jpeg" alt="Image with characters from different battle royales"></p>
-    <article>
+    
         <p>If you have managed to click onto this website, then you most likely know what a battle royal is, or at the<br>
         very least have heard of it. For those who do not know, and for the sake of proper context in this article,<br>
         a battle royal is a form of game which involves a relatively large number of players competing to be<br>
@@ -33,11 +36,12 @@
         This leaves players stuck in a position that causes them to slowly drift away from the game.<br></p>
     <p></p>
     </article>
-    <h1>The Rise of Elden Ring</h1>
+    <article>
+    <h2>The Rise of Elden Ring</h2>
     <p><strong>By:</strong> Oluwanifemi O. Olotu</p>
     <p><strong>Published:</strong> June 1st 2022</p>
     <p><img src="Elden Ring Blog Photo.jpg" alt="Image of Elden Ring loading screen"></p>
-    <article>
+    
         <p>The video game world has seen a huge storm of successful games over the past few years, but there has <br>
         been a particular game that came out this year that has taken the gaming world by storm. The video <br>
         game in question is Elden Ring, an action role-playing game developed by FromSoftware and published <br>
