--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <title>About Oluwanifemi</title>
 </head>
 <body>
+    <p><a href="/index.html">Home</a></p>
     <p>Hey there, my name is Oluwanifemi Olotu. I am a 21 year old college student at Michigan State University.<br>
     I love all sorts of genres of music, but particularly R&B, lowfi, and hip-hop. I am also reaeasonably athletic<br>
     as I like playing many sports including:<br>
