--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <p><a href="/index.html">Home</a></p>
     <p>Hey there, my name is Oluwanifemi Olotu. I am a 21 year old college student at Michigan State University.<br>
     I love all sorts of genres of music, but particularly R&B, lowfi, and hip-hop. I am also reaeasonably athletic<br>
-    as I like playing many sports including:<br>
+    as I like playing many sports including:<br></p>
     <ul>
         <li>Soccer</li>
         <li>Basketball</li>
@@ -18,7 +18,7 @@
         <li>Track and Fields</li>
         <li> Table tennis</li>
     </ul>
-    I am from Nigeria and am 6 feet, 4 inches. I honestly dont know what else to put herre for now, but I will<br>
+    <p>I am from Nigeria and am 6 feet, 4 inches. I honestly dont know what else to put herre for now, but I will<br>
     have some more info in here later on. In the mean time, please enjoy my blog.</bk></p>
     <p><img src="Oluwanifemi's Image.jpg" alt="Image of Oluwanifemi"></p>
 </body>
