--- a/index.html
+++ b/index.html
@@ -34,6 +34,29 @@
         what skill-based match making is for?”, well yes, but people get super lucky for a couple of games <br>
         which moves them up the skill ladder, however they are unable to move back down when their luck runs out. <br>
         This leaves players stuck in a position that causes them to slowly drift away from the game.<br></p>
+        <p></p>
+        <table>
+            <tr>
+                <th>Date</th>
+                <th>Average Monthly Plyers</th>
+            </tr>
+            <tr>
+                <td>12/30/2019</td>
+                <td>47,421,443</td>
+            </tr>
+            <tr>
+                <td>12/30/2020</td>
+                <td>93,697,519</td>
+            </tr>
+            <tr>
+                <td>12/30/2021</td>
+                <td>121,755,890</td>
+            </tr>
+            <tr>
+                <td>5/30/2022</td>
+                <td>117,500,146</td>
+            </tr>
+        </table>
     <p></p>
     </article>
     <article>
