--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <table>
             <tr>
                 <th>Date</th>
-                <th>Average Monthly Plyers</th>
+                <th>Average Monthly Players</th>
             </tr>
             <tr>
                 <td>12/30/2019</td>
