--- a/index.html
+++ b/index.html
@@ -39,22 +39,27 @@
             <tr>
                 <th>Date</th>
                 <th>Average Monthly Players</th>
+                <th>Season</th>
             </tr>
             <tr>
                 <td>12/30/2019</td>
                 <td>47,421,443</td>
+                <td>Season 3</td>
             </tr>
             <tr>
                 <td>12/30/2020</td>
                 <td>93,697,519</td>
+                <td>Season 7</td>
             </tr>
             <tr>
                 <td>12/30/2021</td>
                 <td>121,755,890</td>
+                <td>Season 11</td>
             </tr>
             <tr>
                 <td>5/30/2022</td>
                 <td>117,500,146</td>
+                <td>Season 13</td>
             </tr>
         </table>
     <p></p>
