--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Blog Home</h1>
-    <p><a href="/about.html">About</a></p>
+    <p><a href="/about.html">About</a>  <a href="/contact.html">Contact</a></p>
     <article>
     <h2>Are Battle Royal Games still Fun?</h2>
     <p><strong>By:</strong> Oluwanifemi O. Olotu</p>
