--- a/contact.html
+++ b/contact.html
@@ -15,8 +15,13 @@
         <label>Email:
             <input type="email">
         </label>
-        <label>
-            <select name="Reason for contact" id="contact reason"></select>
+        <label>Reason for Contact:
+            <select name="Reason for contact" id="contact reason">
+                <option
+                    value="contractor">Looking for Contractor</option>
+                <option
+                    value="interview">Looking for Interview</option>
+            </select>
         </label>
         <label>Comments:
             <input type="text">
