--- a/contact.html
+++ b/contact.html
@@ -11,10 +11,10 @@
     <form>
         <label>Name:
             <input type="text">
-        </label>
+        </label><br>
         <label>Email:
             <input type="email">
-        </label>
+        </label><br>
         <label>Reason for Contact:
             <select name="Reason for contact" id="contact reason">
                 <option
@@ -22,10 +22,10 @@
                 <option
                     value="interview">Looking for Interview</option>
             </select>
-        </label>
+        </label><br>
         <label>Comments:
             <input type="text">
-        </label>
+        </label><br>
         <button>Submit</button>
     </form>
 </body>
