--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
     <title>Contact Form</title>
 </head>
 <body>
+    <p><a href="/index.html">About</a>  <a href="/about.html">Contact</a></p>
     <h1>Contact Form</h1>
     <form>
         <label>Name:
