--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
             <input type="email">
         </label><br>
         <label>Reason for Contact:
-            <select name="Reason for contact" id="contact reason">
+            <select name="Reason for contact" id="contact_reason">
                 <option
                     value="contractor">Looking for Contractor</option>
                 <option
