--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h2>Are Battle Royal Games still Fun?</h2>
     <p><strong>By:</strong> Oluwanifemi O. Olotu</p>
     <p><strong>Published:</strong> June 1st 2022</p>
-    <p><img src="Battle Royale Blog Image.jpeg" alt="Image with characters from different battle royales"></p>
+    <p><img src="Battle_Royale_Blog_Image.jpeg" alt="Image with characters from different battle royales"></p>
     
         <p>If you have managed to click onto this website, then you most likely know what a battle royal is, or at the<br>
         very least have heard of it. For those who do not know, and for the sake of proper context in this article,<br>
@@ -68,7 +68,7 @@
     <h2>The Rise of Elden Ring</h2>
     <p><strong>By:</strong> Oluwanifemi O. Olotu</p>
     <p><strong>Published:</strong> June 1st 2022</p>
-    <p><img src="Elden Ring Blog Photo.jpg" alt="Image of Elden Ring loading screen"></p>
+    <p><img src="Elden_Ring_Blog_Photo.jpg" alt="Image of Elden Ring loading screen"></p>
     
         <p>The video game world has seen a huge storm of successful games over the past few years, but there has <br>
         been a particular game that came out this year that has taken the gaming world by storm. The video <br>
