--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
         <li> Table tennis</li>
     </ul>
     <p>I am from Nigeria and am 6 feet, 4 inches. I honestly dont know what else to put herre for now, but I will<br>
-    have some more info in here later on. In the mean time, please enjoy my blog.</bk></p>
-    <p><img src="Oluwanifemi's Image.jpg" alt="Image of Oluwanifemi"></p>
+    have some more info in here later on. In the mean time, please enjoy my blog.</p>
+    <p><img src="Oluwanifemi's_Image.jpg" alt="Image of Oluwanifemi"></p>
 </body>
 </html>
