class and ID changes

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <title>Femi's Blog</title>
 </head>
 <body>
-    <h1>Blog Home</h1>
+    <h1 id="blog-heading">Blog Home</h1>
     <p><a href="/about.html">About</a>  <a href="/contact.html">Contact</a></p>
-    <article>
+    <article class="writen-article">
     <h2>Are Battle Royal Games still Fun?</h2>
     <p><strong>By:</strong> Oluwanifemi O. Olotu</p>
     <p><strong>Published:</strong> June 1st 2022</p>
@@ -65,7 +65,7 @@
         </table>
     <p></p>
     </article>
-    <article>
+    <article class="writen-article">
     <h2>The Rise of Elden Ring</h2>
     <p><strong>By:</strong> Oluwanifemi O. Olotu</p>
     <p><strong>Published:</strong> June 1st 2022</p>
