--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
     <title>About Oluwanifemi</title>
 </head>
 <body>
+    <article>
     <p><a href="/index.html">Home</a>  <a href="/contact.html">Contact</a></p>
     <p>Hey there, my name is Oluwanifemi Olotu. I am a 21 year old college student at Michigan State University.<br>
     I love all sorts of genres of music, but particularly R&B, lowfi, and hip-hop. I am also reaeasonably athletic<br>
@@ -22,5 +23,6 @@
     <p>I am from Nigeria and am 6 feet, 4 inches. I honestly dont know what else to put herre for now, but I will<br>
     have some more info in here later on. In the mean time, please enjoy my blog.</p>
     <p><img src="Oluwanifemi's_Image.jpg" alt="Image of Oluwanifemi"></p>
+    </article>
 </body>
 </html>
