--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,8 @@
     <title>Contact Form</title>
 </head>
 <body>
+    <label class="search-bar"> Search:
+        <input type="text">
     <p><a href="/index.html">Home</a>  <a href="/about.html">About</a></p>
     <h1 id="blog-heading">Contact Form</h1>
     <form>
