--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Femi's Blog</title>
 </head>
 <body>
+    <label class="search-bar"> Search:
+        <input type="text">
+    </label>
     <h1 id="blog-heading">Blog Home</h1>
     <p><a href="/about.html">About</a>  <a href="/contact.html">Contact</a></p>
     <article class="writen-article">
