--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@
 <body>
     <label class="search-bar"> Search:
         <input type="text">
+    </label>
     <p><a href="/index.html">Home</a>  <a href="/contact.html">Contact</a></p>
     <article>
     <p>Hey there, my name is Oluwanifemi Olotu. I am a 21 year old college student at Michigan State University.<br>
