--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,7 @@
 <body>
     <label class="search-bar"> Search:
         <input type="text">
+    </label>
     <p><a href="/index.html">Home</a>  <a href="/about.html">About</a></p>
     <h1 id="blog-heading">Contact Form</h1>
     <form>
