--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     </label>
     <h1 id="blog-heading">Blog Home</h1>
     <p><a href="/about.html">About</a>  <a href="/contact.html">Contact</a></p>
+    <section>
     <article class="writen-article">
     <h2>Are Battle Royal Games still Fun?</h2>
     <p><strong>By:</strong> Oluwanifemi O. Olotu</p>
@@ -68,26 +69,27 @@
         </table>
     <p></p>
     </article>
-    <article class="writen-article">
-    <h2>The Rise of Elden Ring</h2>
-    <p><strong>By:</strong> Oluwanifemi O. Olotu</p>
-    <p><strong>Published:</strong> June 1st 2022</p>
-    <p><img src="Elden_Ring_Blog_Photo.jpg" alt="Image of Elden Ring loading screen"></p>
+        <article class="writen-article">
+            <h2>The Rise of Elden Ring</h2>
+            <p><strong>By:</strong> Oluwanifemi O. Olotu</p>
+            <p><strong>Published:</strong> June 1st 2022</p>
+            <p><img src="Elden_Ring_Blog_Photo.jpg" alt="Image of Elden Ring loading screen"></p>
     
-        <p>The video game world has seen a huge storm of successful games over the past few years, but there has <br>
-        been a particular game that came out this year that has taken the gaming world by storm. The video <br>
-        game in question is Elden Ring, an action role-playing game developed by FromSoftware and published <br>
-        by Bandai Namco Entertainment. It is particularly difficult and is filled with various Non Playable Characters, bosses, and <br>
-        many other enemies to fight with a huge library of weapons, spells, and incantations.<br></p>
+            <p>The video game world has seen a huge storm of successful games over the past few years, but there has <br>
+            been a particular game that came out this year that has taken the gaming world by storm. The video <br>
+            game in question is Elden Ring, an action role-playing game developed by FromSoftware and published <br>
+            by Bandai Namco Entertainment. It is particularly difficult and is filled with various Non Playable Characters, bosses, and <br>
+            many other enemies to fight with a huge library of weapons, spells, and incantations.<br></p>
 
-        <p>According to google, 93 percent of players like the game and it has received a 5/5 rating on TechRadar. <br>
-        It is also available on PlayStation, Xbox, and PC. I am yet to finish the game, but I can tell you one thing <br>
-        for sure, it has been as much fun as difficult. I would say that the introduction of online multiplayer in <br>
-        the form of summons and invasions, together with the size of the map, which is reported to be updated <br>
-        in the future, Elden Ring is far from loosing its shine in the video game industry. It is a challenging game, <br>
-        but not so challenging that it puts the average player off the game completely. I look forward to what <br>
-        else this franchise has to offer.<br></p>
+            <p>According to google, 93 percent of players like the game and it has received a 5/5 rating on TechRadar. <br>
+            It is also available on PlayStation, Xbox, and PC. I am yet to finish the game, but I can tell you one thing <br>
+            for sure, it has been as much fun as difficult. I would say that the introduction of online multiplayer in <br>
+            the form of summons and invasions, together with the size of the map, which is reported to be updated <br>
+            in the future, Elden Ring is far from loosing its shine in the video game industry. It is a challenging game, <br>
+            but not so challenging that it puts the average player off the game completely. I look forward to what <br>
+            else this franchise has to offer.<br></p>
 
-    </article>
+        </article>
+    </section>
 </body>
 </html>
